--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/fiber": "^7.0.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -16,6 +17,7 @@
     "react-icons": "^4.2.0",
     "react-media": "^1.10.0",
     "react-scripts": "4.0.3",
+    "three": "^0.129.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
